finalizando aula de introdução ao pandas

--- a/desafio-projeto1/introducao-pandas.ipynb
+++ b/desafio-projeto1/introducao-pandas.ipynb
@@ -144,12 +144,12 @@
    "outputs": [],
    "source": [
     "#modificando as colunas\n",
-    "df = df.rename(columns={\"country\":\"Pais\", \"continent\":\"Continente\", \"year\":\"Ano\", \"lifeExp\":\"Expectativa\", \"pop\":\"Populacao\", \"gdpPercap\":\"Renda Percapita\"})"
+    "df = df.rename(columns={\"country\":\"Pais\", \"continent\":\"Continente\", \"year\":\"Ano\", \"lifeExp\":\"Expectativa\", \"pop\":\"Populacao\", \"gdpPercap\":\"Renda Per capita\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "101dc907",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "      <th>Ano</th>\n",
        "      <th>Expectativa</th>\n",
        "      <th>Populacao</th>\n",
-       "      <th>Renda Percapita</th>\n",
+       "      <th>Renda Per capita</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -278,20 +278,20 @@
        "</div>"
       ],
       "text/plain": [
-       "          Pais Continente   Ano  Expectativa  Populacao  Renda Percapita\n",
-       "0  Afghanistan       Asia  1952       28.801    8425333       779.445314\n",
-       "1  Afghanistan       Asia  1957       30.332    9240934       820.853030\n",
-       "2  Afghanistan       Asia  1962       31.997   10267083       853.100710\n",
-       "3  Afghanistan       Asia  1967       34.020   11537966       836.197138\n",
-       "4  Afghanistan       Asia  1972       36.088   13079460       739.981106\n",
-       "5  Afghanistan       Asia  1977       38.438   14880372       786.113360\n",
-       "6  Afghanistan       Asia  1982       39.854   12881816       978.011439\n",
-       "7  Afghanistan       Asia  1987       40.822   13867957       852.395945\n",
-       "8  Afghanistan       Asia  1992       41.674   16317921       649.341395\n",
-       "9  Afghanistan       Asia  1997       41.763   22227415       635.341351"
+       "          Pais Continente   Ano  Expectativa  Populacao  Renda Per capita\n",
+       "0  Afghanistan       Asia  1952       28.801    8425333        779.445314\n",
+       "1  Afghanistan       Asia  1957       30.332    9240934        820.853030\n",
+       "2  Afghanistan       Asia  1962       31.997   10267083        853.100710\n",
+       "3  Afghanistan       Asia  1967       34.020   11537966        836.197138\n",
+       "4  Afghanistan       Asia  1972       36.088   13079460        739.981106\n",
+       "5  Afghanistan       Asia  1977       38.438   14880372        786.113360\n",
+       "6  Afghanistan       Asia  1982       39.854   12881816        978.011439\n",
+       "7  Afghanistan       Asia  1987       40.822   13867957        852.395945\n",
+       "8  Afghanistan       Asia  1992       41.674   16317921        649.341395\n",
+       "9  Afghanistan       Asia  1997       41.763   22227415        635.341351"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1b9dd9f7",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "(3312, 6)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4c8aa349",
    "metadata": {},
    "outputs": [
@@ -333,11 +333,11 @@
      "data": {
       "text/plain": [
        "Index(['Pais', 'Continente', 'Ano', 'Expectativa', 'Populacao',\n",
-       "       'Renda Percapita'],\n",
+       "       'Renda Per capita'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,23 +349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c3f62a52",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pais                object\n",
-       "Continente          object\n",
-       "Ano                  int64\n",
-       "Expectativa        float64\n",
-       "Populacao            int64\n",
-       "Renda Percapita    float64\n",
+       "Pais                 object\n",
+       "Continente           object\n",
+       "Ano                   int64\n",
+       "Expectativa         float64\n",
+       "Populacao             int64\n",
+       "Renda Per capita    float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1d9bd108",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "      <th>Ano</th>\n",
        "      <th>Expectativa</th>\n",
        "      <th>Populacao</th>\n",
-       "      <th>Renda Percapita</th>\n",
+       "      <th>Renda Per capita</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -461,15 +461,15 @@
        "</div>"
       ],
       "text/plain": [
-       "          Pais Continente   Ano  Expectativa  Populacao  Renda Percapita\n",
-       "3307  Zimbabwe     Africa  1987       62.351    9216418       706.157306\n",
-       "3308  Zimbabwe     Africa  1992       60.377   10704340       693.420786\n",
-       "3309  Zimbabwe     Africa  1997       46.809   11404948       792.449960\n",
-       "3310  Zimbabwe     Africa  2002       39.989   11926563       672.038623\n",
-       "3311  Zimbabwe     Africa  2007       43.487   12311143       469.709298"
+       "          Pais Continente   Ano  Expectativa  Populacao  Renda Per capita\n",
+       "3307  Zimbabwe     Africa  1987       62.351    9216418        706.157306\n",
+       "3308  Zimbabwe     Africa  1992       60.377   10704340        693.420786\n",
+       "3309  Zimbabwe     Africa  1997       46.809   11404948        792.449960\n",
+       "3310  Zimbabwe     Africa  2002       39.989   11926563        672.038623\n",
+       "3311  Zimbabwe     Africa  2007       43.487   12311143        469.709298"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6f666896",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "f71dce77",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
        "      <th>Ano</th>\n",
        "      <th>Expectativa</th>\n",
        "      <th>Populacao</th>\n",
-       "      <th>Renda Percapita</th>\n",
+       "      <th>Renda Per capita</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -588,15 +588,15 @@
        "</div>"
       ],
       "text/plain": [
-       "     Pais Continente   Ano  Expectativa  Populacao  Renda Percapita\n",
-       "975  Fiji    Oceania  1962       56.494     421869      2039.393277\n",
-       "976  Fiji    Oceania  1967       58.607     485000      2170.073285\n",
-       "977  Fiji    Oceania  1972       60.642     544000      2797.759484\n",
-       "978  Fiji    Oceania  1977       62.669     599339      3182.569600\n",
-       "979  Fiji    Oceania  1982       64.683     658906      3209.257468"
+       "     Pais Continente   Ano  Expectativa  Populacao  Renda Per capita\n",
+       "975  Fiji    Oceania  1962       56.494     421869       2039.393277\n",
+       "976  Fiji    Oceania  1967       58.607     485000       2170.073285\n",
+       "977  Fiji    Oceania  1972       60.642     544000       2797.759484\n",
+       "978  Fiji    Oceania  1977       62.669     599339       3182.569600\n",
+       "979  Fiji    Oceania  1982       64.683     658906       3209.257468"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "41081f99",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
        "Name: Pais, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,8 +638,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a4eb9972",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ano\n",
+       "1950    62.002568\n",
+       "1951    65.904167\n",
+       "1952    49.206867\n",
+       "1953    66.674563\n",
+       "1954    67.459817\n",
+       "1955    67.806757\n",
+       "1956    67.950637\n",
+       "1957    51.614590\n",
+       "1958    68.815936\n",
+       "1959    68.226579\n",
+       "1960    68.470837\n",
+       "1961    68.862480\n",
+       "1962    54.035234\n",
+       "1963    69.595735\n",
+       "1964    70.063105\n",
+       "1965    70.259881\n",
+       "1966    70.447526\n",
+       "1967    56.263629\n",
+       "1968    70.689081\n",
+       "1969    70.653896\n",
+       "1970    70.961141\n",
+       "1971    71.103976\n",
+       "1972    58.474481\n",
+       "1973    71.500338\n",
+       "1974    71.778504\n",
+       "1975    71.939218\n",
+       "1976    72.158050\n",
+       "1977    60.429090\n",
+       "1978    72.717567\n",
+       "1979    73.018717\n",
+       "1980    73.064524\n",
+       "1981    73.337399\n",
+       "1982    62.365871\n",
+       "1983    73.787778\n",
+       "1984    74.100741\n",
+       "1985    74.112222\n",
+       "1986    74.452222\n",
+       "1987    63.984860\n",
+       "1988    74.760000\n",
+       "1989    74.924444\n",
+       "1990    74.283437\n",
+       "1991    74.374848\n",
+       "1992    65.008443\n",
+       "1993    74.324545\n",
+       "1994    74.456667\n",
+       "1995    74.552727\n",
+       "1996    75.029394\n",
+       "1997    65.873799\n",
+       "1998    75.569697\n",
+       "1999    75.703636\n",
+       "2000    76.026364\n",
+       "2001    76.257879\n",
+       "2002    66.835695\n",
+       "2003    76.586667\n",
+       "2004    76.921563\n",
+       "2005    76.718667\n",
+       "2006    77.887778\n",
+       "2007    67.868557\n",
+       "Name: Expectativa, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#consultando a media da expectativa de vida por ano\n",
+    "df.groupby(\"Ano\")[\"Expectativa\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b74fe23f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11317.115804696637"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#consultando a media da renda per capita\n",
+    "df[\"Renda Per capita\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f02b65ee",
    "metadata": {},
    "outputs": [],
    "source": []
