--- a/desafio-projeto1/pandas-excel.ipynb
+++ b/desafio-projeto1/pandas-excel.ipynb
@@ -903,6 +903,565 @@
     "#Ordenando o conjunto de dados\n",
     "df.sort_values(\"Receita\", ascending=False).head(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebe32061",
+   "metadata": {},
+   "source": [
+    "**Trabalhando com datas**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4c3ed0ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convertendo o tipo da coluna data para inteiro\n",
+    "df[\"Data\"] = df[\"Data\"].astype(\"int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7b43f4d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cidade      object\n",
+       "Data         int64\n",
+       "Vendas     float64\n",
+       "LojaID      object\n",
+       "Qtde         int64\n",
+       "Receita    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#verificando o tipo de dados de cada coluna\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4c36eb82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#transformando coluna data em tipo data de novo\n",
+    "df[\"Data\"] = pd.to_datetime(df[\"Data\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "42bbe82f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cidade             object\n",
+       "Data       datetime64[ns]\n",
+       "Vendas            float64\n",
+       "LojaID             object\n",
+       "Qtde                int64\n",
+       "Receita           float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#verificando o tipo de dados de cada coluna\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9cae2f74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data\n",
+       "2018    118176.53\n",
+       "2019    228246.45\n",
+       "Name: Receita, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#agrupamento por ano\n",
+    "df.groupby(df[\"Data\"].dt.year)[\"Receita\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ac1243e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#criando uma nova coluna com o ano\n",
+    "df[\"Ano_Venda\"] = df[\"Data\"].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4162cdca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Data</th>\n",
+       "      <th>Vendas</th>\n",
+       "      <th>LojaID</th>\n",
+       "      <th>Qtde</th>\n",
+       "      <th>Receita</th>\n",
+       "      <th>Ano_Venda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Recife</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>14.53</td>\n",
+       "      <td>983</td>\n",
+       "      <td>6</td>\n",
+       "      <td>87.18</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>Fortaleza</td>\n",
+       "      <td>2019-03-02</td>\n",
+       "      <td>38.63</td>\n",
+       "      <td>980</td>\n",
+       "      <td>2</td>\n",
+       "      <td>77.26</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Recife</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>12.35</td>\n",
+       "      <td>980</td>\n",
+       "      <td>5</td>\n",
+       "      <td>61.75</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Aracaju</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>228.27</td>\n",
+       "      <td>1523</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1369.62</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>Aracaju</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>33.12</td>\n",
+       "      <td>1522</td>\n",
+       "      <td>9</td>\n",
+       "      <td>298.08</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Cidade       Data  Vendas LojaID  Qtde  Receita  Ano_Venda\n",
+       "79      Recife 2019-01-01   14.53    983     6    87.18       2019\n",
+       "113  Fortaleza 2019-03-02   38.63    980     2    77.26       2019\n",
+       "30      Recife 2019-01-01   12.35    980     5    61.75       2019\n",
+       "71     Aracaju 2018-01-01  228.27   1523     6  1369.62       2018\n",
+       "127    Aracaju 2018-01-01   33.12   1522     9   298.08       2018"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pegando amosra do conjunto de dados\n",
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0c1ef830",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#extraindo o mes e o dia\n",
+    "df[\"mes_venda\"], df[\"dia_venda\"] = (df[\"Data\"].dt.month, df[\"Data\"].dt.day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2ff44e2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Data</th>\n",
+       "      <th>Vendas</th>\n",
+       "      <th>LojaID</th>\n",
+       "      <th>Qtde</th>\n",
+       "      <th>Receita</th>\n",
+       "      <th>Ano_Venda</th>\n",
+       "      <th>mes_venda</th>\n",
+       "      <th>dia_venda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>Salvador</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>161.02</td>\n",
+       "      <td>1037</td>\n",
+       "      <td>3</td>\n",
+       "      <td>483.06</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Salvador</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>32.57</td>\n",
+       "      <td>1035</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32.57</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Natal</td>\n",
+       "      <td>2019-03-17</td>\n",
+       "      <td>244.00</td>\n",
+       "      <td>854</td>\n",
+       "      <td>2</td>\n",
+       "      <td>488.00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>Natal</td>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>63.66</td>\n",
+       "      <td>1036</td>\n",
+       "      <td>2</td>\n",
+       "      <td>127.32</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>Natal</td>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>5.80</td>\n",
+       "      <td>1036</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.80</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Cidade       Data  Vendas LojaID  Qtde  Receita  Ano_Venda  mes_venda  \\\n",
+       "62   Salvador 2019-01-01  161.02   1037     3   483.06       2019          1   \n",
+       "22   Salvador 2019-01-01   32.57   1035     1    32.57       2019          1   \n",
+       "32      Natal 2019-03-17  244.00    854     2   488.00       2019          3   \n",
+       "83      Natal 2019-01-02   63.66   1036     2   127.32       2019          1   \n",
+       "161     Natal 2019-01-02    5.80   1036     1     5.80       2019          1   \n",
+       "\n",
+       "     dia_venda  \n",
+       "62           1  \n",
+       "22           1  \n",
+       "32          17  \n",
+       "83           2  \n",
+       "161          2  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pegando amosra do conjunto de dados\n",
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4071126a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2018-01-01 00:00:00')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#retornando data mais antiga\n",
+    "df[\"Data\"].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7319cfb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#criando coluna do trimestre\n",
+    "df[\"trimestre_venda\"] = df[\"Data\"].dt.quarter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f45f8af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Data</th>\n",
+       "      <th>Vendas</th>\n",
+       "      <th>LojaID</th>\n",
+       "      <th>Qtde</th>\n",
+       "      <th>Receita</th>\n",
+       "      <th>Ano_Venda</th>\n",
+       "      <th>mes_venda</th>\n",
+       "      <th>dia_venda</th>\n",
+       "      <th>trimestre_venda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Fortaleza</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>212.37</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1274.22</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Natal</td>\n",
+       "      <td>2018-11-25</td>\n",
+       "      <td>563.00</td>\n",
+       "      <td>853</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1126.00</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>11</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Salvador</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>39.72</td>\n",
+       "      <td>1035</td>\n",
+       "      <td>3</td>\n",
+       "      <td>119.16</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>Aracaju</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>13.70</td>\n",
+       "      <td>1522</td>\n",
+       "      <td>6</td>\n",
+       "      <td>82.20</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>Fortaleza</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>37.49</td>\n",
+       "      <td>1002</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37.49</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Cidade       Data  Vendas LojaID  Qtde  Receita  Ano_Venda  mes_venda  \\\n",
+       "27   Fortaleza 2019-01-01  212.37   1003     6  1274.22       2019          1   \n",
+       "1        Natal 2018-11-25  563.00    853     2  1126.00       2018         11   \n",
+       "21    Salvador 2019-01-01   39.72   1035     3   119.16       2019          1   \n",
+       "129    Aracaju 2018-01-01   13.70   1522     6    82.20       2018          1   \n",
+       "91   Fortaleza 2019-01-01   37.49   1002     1    37.49       2019          1   \n",
+       "\n",
+       "     dia_venda  trimestre_venda  \n",
+       "27           1                1  \n",
+       "1           25                4  \n",
+       "21           1                1  \n",
+       "129          1                1  \n",
+       "91           1                1  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pegando amosra do conjunto de dados\n",
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f81d7fb7",
+   "metadata": {},
+   "source": [
+    "**Visualização de dados**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7500828",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gráfico de barras\n",
+    "df[\"LojaID\"].value_conuts"
+   ]
   }
  ],
  "metadata": {
